# cpp-exercises-study

./: LICENSE  README.md
exercise-1/: .clangd  Headers.h  main.cpp
exercise-1/src/: CMakeLists.txt  CalcMass.h  Equation.h  Headers.h  Repository.h  main.cpp
